# agnpy

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .zenodo.json  DT_emission.ipynb  LICENSE  MANIFEST.in  README.md  Reproduce_Fig13_KA2008.ipynb  Reproduce_Fig15_KA2008.ipynb  check_absorption_disk.py  codemeta.json  compute_s.ipynb  environment.yaml  environment.yml  interpolate_abl.ipynb  multi_bb_dt_sed.ipynb  new_photomeson.py  pyproject.toml  readthedocs.yaml  setup.py  sigma.ipynb  tau_blr_gamma_gamma.ipynb  tau_disk_gamma_gamma.ipynb  test_abs.ipynb  test_new_synch.ipynb  trapz_loglog_trial.py  trial_ebl.py  trial_new_ec.py  trial_new_ssc.py  trial_new_synch.py
agnpy/: __init__.py  absorption.py  compton.py  compton_old.py  core_compton.pyx  core_synchrotron.pyx  emission_region.py  emission_regions.py  particles.py  spectra.py  spectral_constraints.py  synchrotron.py  targets.py  tau_old.py  utils.py
agnpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: absorption.rst  acknowledging.rst  agnpy.rst  bibliography.rst  calc_targets.rst  calc_u_sed.rst  compton.rst  conf.py  derivations.rst  description.rst  emission_regions.rst  fit.rst  index.rst  modules.rst  proton_synchrotron.rst  references.rst  requirements.txt  spectra.rst  spectral_constraints.rst  synchrotron.rst  targets.rst  time_evolution.rst
experiments/: README.md  check_gammapy_fit.py
tests/: Profile_ec_blr_sed.prof  Profile_ec_disk_sed.prof  Profile_ec_dt_sed.prof  Profile_ssc_sed.prof  Profile_ssc_ssa_sed.prof  Profile_syn_sed.prof  Profile_syn_sed_SSA.prof  matplotlibrc  test_R_x.py  (+10 more)
(+435 files in other folders)
